feat - kafka custom consumer